# lib-c-cache

./: .gitignore  .gitmodules  CMakeLists.txt
ccache-consumer/: CMakeLists.txt  main.c
cmake/: ccacheConfig.cmake.in
install/lib/cmake/ccache/: ccacheConfig.cmake  ccacheTargets-noconfig.cmake  ccacheTargets.cmake
